Chapter 03/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
    nodePort: 30010 
  type: LoadBalancer
