Chapter 03/ingress-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-host-ingress
spec:
  rules:
  - host: tiger.handon-k8s.com
    http:
      paths:
      - backend:
          serviceName: my-app-service
          servicePort: 6000
