Chapter 03/ingress-tls-secret.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-path-ingress
spec:
  rules:
  - host: tiger.handon-k8s.com
  http:
    paths:
	- path: "/"
      backend:
        serviceName: my-app-service
        servicePort: 6000
	- path: "/a/"
	  backend:
        serviceName: my-app-service-2
        servicePort: 6000
