Chapter 03/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  backend:
    serviceName: my-app-service
    servicePort: 6000
